[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/popups/popup_generic_confirm.gd" type="Script" id=2]
[ext_resource path="res://components/elements/styled/style_color_auto_remap.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.113725 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0588235, 0.2, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="ConfirmPopup" type="PopupDialog"]
self_modulate = Color( 0.0901961, 0.113725, 0.129412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 400, 150 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 7 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Content"]
margin_right = 400.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
custom_styles/normal = SubResource( 8 )
text = "Confirm Dialogue"
align = 1
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Content"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Content/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 380.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="Content/MarginContainer/Content"]
margin_right = 360.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Content/MarginContainer/Content"]
margin_top = 31.0
margin_right = 360.0
margin_bottom = 64.0
align = 1

[node name="Spacer" type="Control" parent="Content/MarginContainer/Content"]
margin_top = 74.0
margin_right = 360.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 10 )

[node name="Buttons" type="HBoxContainer" parent="Content/MarginContainer/Content"]
margin_top = 94.0
margin_right = 360.0
margin_bottom = 127.0
custom_constants/separation = 20
alignment = 1

[node name="LeftButton" type="Button" parent="Content/MarginContainer/Content/Buttons"]
margin_left = 90.0
margin_right = 170.0
margin_bottom = 33.0
rect_min_size = Vector2( 80, 0 )
theme_type_variation = "ButtonFlat"
text = "Yes"
flat = true

[node name="RightButton" type="Button" parent="Content/MarginContainer/Content/Buttons"]
margin_left = 190.0
margin_right = 270.0
margin_bottom = 33.0
rect_min_size = Vector2( 80, 0 )
theme_type_variation = "ButtonFlat"
text = "Cancel"
flat = true

[connection signal="text_entered" from="Content/MarginContainer/Content/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Content/MarginContainer/Content/Buttons/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Content/MarginContainer/Content/Buttons/RightButton" to="." method="_on_RightButton_pressed"]
